{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "InGame",
            "id": "e603a2c6-c136-4e1e-a466-beea265b82d9",
            "actions": [
                {
                    "name": "WalkRight",
                    "type": "Button",
                    "id": "b7b06c20-4d8d-4537-825d-3ae4e6ef341c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.6),Press(pressPoint=0.4,behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "WalkLeft",
                    "type": "Button",
                    "id": "a3ebb04f-4589-4a05-99fa-24e3b02feeb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press,Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "WalkUp",
                    "type": "Button",
                    "id": "b4624251-f4e5-46d9-b5a1-006ecd23695a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press,Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "WalkDown",
                    "type": "Button",
                    "id": "7943a05c-2519-4c44-a3c1-de1a9997baf6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press,Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "65afef36-f97f-4122-aa39-ba5f5412dd6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press,Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Complete",
                    "type": "Button",
                    "id": "dca32f94-ba9d-402f-88b6-e74d8efae324",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press,Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "QuitGame",
                    "type": "Button",
                    "id": "9cdcb3b5-b8f6-4c25-918f-7908c7cd4a71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RandomizeNavigation",
                    "type": "Button",
                    "id": "6ac99951-3c1d-46b8-aede-8bb0562fc6ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "e72dad88-21bf-42c7-aee3-99ed3f18f0ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9f4d1827-447b-41ac-b993-56665be68c0a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "WalkRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db93c92e-e064-4ae4-8f31-a2dbc5ea9121",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "WalkLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fc547c4-8fe1-4ae4-ac55-a8491cdd8b31",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "WalkUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cca87010-dcf4-4aff-af5a-6430a8bc0711",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "WalkDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f84097a-0abf-4e13-816c-db01bf6d937d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5227780b-5bca-4067-9e75-eb926680a58e",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Complete",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "CtrlQ",
                    "id": "a86aefa8-075e-41b1-9626-8e7f7c9eca02",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuitGame",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "ab377428-de66-4025-859e-9bb98c55d86d",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "QuitGame",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "3bfd76bb-5a11-463b-9dbf-7d1d586306aa",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "QuitGame",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b243ffb8-c121-499e-9624-804b8de785b3",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RandomizeNavigation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba2a1f8c-5f9c-4a80-b180-3f26a72ba002",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RandomizeNavigation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e95531f-e581-4345-acd6-a6cbeb4fec03",
                    "path": "<Keyboard>/space",
                    "interactions": "Press,Press(behavior=1)",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}